[package]
name = "rust-mini-lti-app"
version = "0.1.0"
edition = "2021"
description = "Minimal LTI tool provider implementation written in Rust with axum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["cookie-signed"] }
base64 = "0.13.1"
form_urlencoded = "1.1.0"
hmac = "0.12.1"
hyper = { version = "0.14.20", features = ["full"] }
percent-encoding = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
